# anvil

./: .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SHIP.md  Taskfile.yml  build.zig  build.zig.zon  package.json  playwright.config.ts  pnpm-lock.yaml  todo.txt  vite.config.js  vitest.config.ts
.cargo/: config.toml
.claude/: launch.json  settings.json
.claude/agents/: builder.md  design-lead.md  librarian.md  orchestrator.md  product-strategist.md  reviewer.md  systems-architect.md
.forge/: state.db
.forge/context-cache/: latest.json  latest.md
.github/workflows/: ci.yml  release.yml
.obsidian/: graph.json  workspace.json
Casks/: anvil.rb
assets/: AppIcon.icns
brand/: README.md  tokens.css  tokens.json
context/: 2026-05-21-m1-complete.md  2026-05-21-m3-complete.md  2026-05-22-master-roadmap.md  2026-05-22-rust-port-plan.md  2026-05-24-ag2-architecture.md  2026-05-24-br3-architecture.md  2026-05-24-br4-architecture.md  2026-05-24-br5-architecture.md  2026-05-24-d-parity-routing.md  2026-05-24-hud-pretty.md  2026-05-24-hud-redesign.md  2026-05-24-hud-routing.md  2026-05-24-hud-v2.md  2026-05-24-id1-architecture.md  2026-05-24-id3-id4-architecture.md  2026-05-24-ide-redesign.md  2026-05-24-palette-architecture.md  2026-05-24-polish-architecture.md  2026-05-24-polish-batch-routing.md  2026-05-24-thirty-arch.md  2026-05-24-thirty-routing.md  2026-05-24-viewport-consolidation-design.md  2026-05-24-warm-palette.md  2026-05-25-handoff.md  2026-05-25-ide-polish-handoff.md  2026-05-25-ide-polish-item-19-visual-diff.md  2026-05-25-ide-polish-items-11-20-handoff.md  2026-05-25-ide-polish-items-7-8-10-spec.md  2026-05-25-ide-polish-slice-decisions.md  2026-05-25-native-editor-rescue-spec.md  2026-05-25-native-editor-roadmap.md  2026-05-25-real-tabs-handoff.md  2026-05-26-group4-depth-handoff.md  2026-05-26-option-a-visual-diff-spec.md  2026-05-26-overlay-redesign-spec.md  2026-05-26-plugin-api-spec.md  2026-05-26-proportional-font-spec.md  2026-05-29-terminal-first-direction.md  README.md  handoff-2026-06-01-roadmap-sweep.md  (+1 more)
coverage/: accounts.ts.html  agent-queue.ts.html  agent-seed.ts.html  agent-tools.ts.html  agent.ts.html  cm-color.ts.html  cm-ghost.ts.html  cm-lang.ts.html  cm-lsp.ts.html  cm-snippets.ts.html  cm-theme.ts.html  command-blocks.ts.html  command-history.ts.html  coverage-summary.json  crash.ts.html  density.ts.html  diagnostics.ts.html  editor-live.ts.html  editor-settings.ts.html  extensions.ts.html  fonts.ts.html  fuzzy.ts.html  git.ts.html  index.html  keymap.ts.html  layout-settings.ts.html  linediff.ts.html  lsp.ts.html  merge.ts.html  offline.ts.html  panes.ts.html  redaction.ts.html  scale.ts.html  search-edit.ts.html  telemetry.ts.html  term-registry.ts.html  terminal-open.ts.html  terminal-settings.ts.html  themes.ts.html  toast.ts.html
crates/anvil/: Cargo.toml
crates/anvil-agent/: Cargo.toml
crates/anvil-caldera/: Cargo.toml
crates/anvil-config/: Cargo.toml  config.example.toml
crates/anvil-control/: Cargo.toml
crates/anvil-control/src/: bridge.rs  lib.rs
crates/anvil-editor/: Cargo.toml
crates/anvil-editor/src/: bridge.rs  buffer.rs  codec.rs  git.rs  lib.rs  lsp.rs  syntax.rs  transport.rs
crates/anvil-editor/src/nvim/: bridge.rs  mod.rs  transport.rs
crates/anvil-platform/: Cargo.toml
crates/anvil-platform/benches/: glyph_cache.rs
crates/anvil-platform/src/: appkit.rs  font.rs  glyph_atlas.rs  lib.rs  metal.rs  pty.rs  shell_integration.rs  system.rs  ui_text.rs  webview.rs
crates/anvil-plugin/: Cargo.toml
crates/anvil-plugin/src/: bridge.rs  host.rs  lib.rs  manifest.rs  plugin.rs  sandbox.rs
crates/anvil-plugin/src/api/: command.rs  keymap.rs  mod.rs  notify.rs  statusbar.rs
crates/anvil-plugin/tests/: plugin_tests.rs
crates/anvil-prompt/: Cargo.toml
crates/anvil-prompt-core/: Cargo.toml
crates/anvil-render/: Cargo.toml
crates/anvil-render/benches/: draw_viewport.rs
crates/anvil-render/src/: agent_panel.rs  atlas.rs  batch.rs  cheatsheet.rs  context_bar.rs  draw.rs  editor.rs  filetree.rs  left_dock.rs  lib.rs  raster.rs  searchbar.rs  statusbar.rs  tabbar.rs  ui_text_sizes.rs  workspace.rs
crates/anvil-render/src/overlay/: anim.rs  chrome.rs  input.rs  mod.rs  text.rs
crates/anvil-render/src/overlay/widgets/: mod.rs  picker.rs  text_input.rs  tooltip.rs
crates/anvil-term/: Cargo.toml
crates/anvil-term/benches/: grid_resize.rs  parser.rs
crates/anvil-term/src/: cell.rs  grid.rs  lib.rs  parser.rs  scrollback.rs  search.rs  terminal.rs
crates/anvil-theme/: Cargo.toml
crates/anvil-workspace/: Cargo.toml
crates/anvil/src/: app_helpers.rs  fs_worker.rs  git_blame.rs  keybindings.rs  kube.rs  layout_state.rs  main.rs  overlays.rs  pane_docking.rs  services.rs  session.rs  tests.rs
docs/: RELEASE.md  keymap.md  perf.md  roadmap-terax-parity.md  roadmap-terax-zed.md  roadmap-v2.md  zig-guide.md
docs/design/: agent-panel-mockup.html  agent-panel-modes.html  chrome-overlay-spike.md  hud-mockup.html  palette-warm.html  (+2 more)
e2e/: chrome-visual.spec.ts  panes-dragsplit.spec.ts  perf.spec.ts  shell.spec.ts  views-smoke.spec.ts
scripts/: bench-vs-alacritty.sh  run.sh
shell/: anvil-integration.bash  anvil-integration.zsh  caldera-integration.bash  caldera-integration.zsh  zdotdir-zshenv.zsh
src/: agent.zig  app.css  app.html  app.zig  caldera.zig  chrome.zig  cli.zig  config.zig  context_chip.zig  copy_mode.zig  coverage_root.zig  editor.zig  fileview.zig  ipc.zig  keys.zig  main.zig  palette.zig  pty.zig  regex.zig  root.zig  search.zig  session.zig  session_manager.zig  session_persist.zig  syntax.zig  test-setup.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ci.rs  cloud.rs  docker.rs  doctor.rs  flux.rs  fs.rs  git.rs  iac.rs  kube.rs  kube_rs.rs  lib.rs  llm.rs  lsp.rs  main.rs  observability.rs  pty.rs  shared.rs  watch.rs  window.rs
tools/: check-render.py  gen-iconset.swift  get-zig.sh  install-app.sh  make-icns.sh
wiki/: index.md  log.md
(+450 files in other folders)
