[package]
name = "anvil"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anvil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
futures-util = "0.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2"
rfd = "0.15"

# Shrink the shipped binary: strip symbols, fat LTO, size-optimized codegen,
# single codegen unit, and abort-on-panic (drops unwinding tables). Takes the
# release bundle from ~45 MB (debug) down to a fraction of that.
[dev-dependencies]
tempfile = "3"

# Tuned for fast local rebuilds (solo dev iterates constantly). Thin LTO links
# ~2-3x faster than fat with ~95% of the size win; 16 codegen units parallelize
# compilation. Net binary cost is <1 MB on a ~9.5 MB app. For a public/min-size
# distribution build, set `lto = "fat"` and `codegen-units = 1`.
[profile.release]
strip = true
lto = "thin"
opt-level = "s"
codegen-units = 16
panic = "abort"

