[package]
name = "anvil-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvil-term      = { workspace = true }
anvil-workspace = { workspace = true }
anvil-agent     = { workspace = true }
anvil-caldera   = { workspace = true }
thiserror       = { workspace = true }
