[package]
name = "anvil-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-md = { workspace = true }
streaming-iterator = { workspace = true }
# NE9: LSP client plumbing
tokio = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
# NE13: git gutter + diff
gix = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = "3"
