[package]
name = "anvil-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvil-term      = { workspace = true }
anvil-workspace = { workspace = true }
anvil-render    = { workspace = true }
anvil-theme     = { workspace = true }
anvil-config    = { workspace = true }
anvil-control   = { workspace = true }
nix             = { workspace = true }
thiserror       = { workspace = true }
libc            = "0.2"

# objc2 / Apple framework bindings (macOS only)
objc2                  = { workspace = true }
objc2-core-foundation  = { workspace = true, features = ["CFString", "CFError", "CFCGTypes", "CFArray", "CFDictionary", "CFAttributedString", "CFNumber"] }
objc2-foundation   = { workspace = true, features = [
    "NSString",
    "NSError",
    "NSTimer",
    "NSDate",
    "NSData",
    "NSGeometry",
    "NSObject",
    "NSNotification",
    "NSValue",
] }
objc2-app-kit      = { workspace = true, features = [
    "NSApplication",
    "NSAppearance",
    "NSEvent",
    "NSImage",
    "NSPasteboard",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-web-kit      = { workspace = true, features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKUserContentController",
    "WKScriptMessage",
    "WKScriptMessageHandler",
] }
block2             = { version = "0.6" }
objc2-metal        = { workspace = true, features = [
    "MTLDevice",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLRenderPipeline",
    "MTLRenderPass",
    "MTLLibrary",
    "MTLTexture",
    "MTLPixelFormat",
    "MTLDrawable",
    "MTLAllocation",
    "MTLResource",
    "MTLDefines",
    "MTLTypes",
    "MTLBuffer",
    "block2",
] }
objc2-quartz-core  = { workspace = true, features = ["CAMetalLayer"] }
objc2-core-text    = { workspace = true, features = [
    "CTFont",
    "CTFontDescriptor",
    "CTFontManager",
    "CTFontTraits",
    "CTLine",
    "CTStringAttributes",
] }
objc2-core-graphics = { workspace = true, features = [
    "CGBase",
    "CGGeometry",
    "CGAffineTransform",
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGDataProvider",
    "CGFont",
    "CGImage",
] }

[dev-dependencies]
criterion = { workspace = true }
anvil-render = { workspace = true }

[[bench]]
name = "glyph_cache"
harness = false
