[package]
name = "anvil-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored", "send"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
crossbeam-channel = "0.5"
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
log = "0.4"

[dev-dependencies]
tempfile = "3"
