[package]
name = "anvil-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anvil-term         = { workspace = true }
anvil-workspace    = { workspace = true }
anvil-theme        = { workspace = true }
anvil-agent        = { workspace = true }
anvil-prompt-core  = { path = "../anvil-prompt-core" }
anvil-editor       = { path = "../anvil-editor" }
unicode-segmentation = { workspace = true }
libc               = "0.2"

[dev-dependencies]
criterion     = { workspace = true }
anvil-term    = { workspace = true }
anvil-theme   = { workspace = true }
anvil-workspace = { workspace = true }

[[bench]]
name = "draw_viewport"
harness = false
