[package]
name = "anvil-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "grid_resize"
harness = false
